--- a/web2.html
+++ b/web2.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-<title>Задание 1</title>
+<meta charset="utf-8">
+<title>Задание 2</title>
 </head>
 <body>
 <img src="1.png" alt="Окно подключения">
